fixed overflow in chat, sheet controls are fully working now

--- a/morse-vite/src/components/chat/chat.module.css
+++ b/morse-vite/src/components/chat/chat.module.css
@@ -3,6 +3,7 @@
     background-color: var(--gray-70);
     box-shadow: var(--shadow-1);
     padding: 1rem;
+    overflow-y: auto;
 }
 .chat span{
     color: var(--pastel-yellow);
